--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
       </div>
       <div class="main">
-          <h2>Tips</h2>
+          <h2>Tips (index)</h2>
           <h4>Some practical tips</h4>
           <!-- <div class="fakeimg" style="height:200px;">Image</div> -->
           <p>
